# alt-sendme

./: .gitignore  CONTRIBUTING.md  PRIVACY.md  README.md  biome.json  build-debug.yml  components.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.lib-test.json  vite.config.ts
.github/: release.yml
.github/workflows/: deploy-web.yml  lint.yml  publish.yml  test.yml
deploy/relay/: README.md
engine/: Cargo.toml
engine-wasm/: Cargo.toml
engine-wasm/.cargo/: config.toml
engine-wasm/src/: lib.rs
engine/native/: Cargo.toml
engine/native/src/: device_identity.rs  export.rs  identity_store.rs  import.rs  lib.rs  node.rs  paired_connections.rs  pairing_dev_log.rs  pairing_util.rs  receive.rs  runtime.rs  secret_store.rs  send.rs  storage.rs  types.rs
engine/protocol/: Cargo.toml
engine/protocol/src/: control.rs  identity.rs  lib.rs  pairing.rs  pairing_auth.rs  receive.rs  relay.rs  send.rs  time_compat.rs  types.rs
engine/src/: lib.rs
engine/src/core/: receive.rs  send.rs  types.rs
engine/tests/: test_cleanup.rs  test_conflicts.rs  test_directory.rs  test_events.rs  test_large_file.rs  test_multi_item.rs  test_pairing.rs  test_pairing_e2e.rs  test_single_file.rs
engine/tests/common/: mod.rs
engine/wasm-io/: Cargo.toml
engine/wasm-io/src/: export.rs  import.rs  lib.rs  receive.rs  send.rs  storage.rs  types.rs
frontend/: index.html
frontend/public/: manifest.json
frontend/src/: global.d.ts  index.css  main.tsx  vite-env.d.ts
frontend/src/assets/: pulse.json
frontend/src/components/: AppAlertDialog.tsx  AppFooter.tsx  AppThemeProvider.tsx  AppVersionPayload.tsx  CountryFlag.tsx  CustomTitleBar.tsx  LanguageSwitcher.tsx  RelayStatusButton.tsx  ThemeSwitcher.tsx  TitleBar.tsx  WebPromoPanel.tsx  back-arrow-icon.tsx  icons.tsx
frontend/src/components/common/: AppUpdater.tsx  FileCopyProgressDialog.tsx  PulseAnimation.tsx  SingleLayoutPage.tsx  StatusIndicator.tsx  TransferProgressBar.tsx  TransferSuccessScreen.tsx
frontend/src/components/illustration/: default-file.tsx  doc-file.tsx  folder.tsx  image-file.tsx  index.tsx  json-file.tsx  pdf-file.tsx  ppt-file.tsx  txt-file.tsx  video-file.tsx  xlsx-file.tsx  zip-file.tsx
frontend/src/components/layouts/: AppProviders.tsx  RootLayout.tsx  SettingLayout.tsx
frontend/src/components/pairing/: DeviceNodeSync.tsx  DevicePairingStatus.tsx  PairedDevicesSearchField.tsx  PairedInviteDialog.tsx
frontend/src/components/receiver/: InstructionsCard.tsx  ReceiveSaveLocationPicker.tsx  Receiver.tsx  ReceiverProvider.tsx  ReceivingActiveCard.tsx  TicketInput.tsx
frontend/src/components/sender/: BrowseButtons.tsx  DragDrop.tsx  Dropzone.tsx  PairedDevicesPanel.tsx  Sender.tsx  ShareActionCard.tsx  ShareLinkPanel.tsx  SharingActiveCard.tsx  SharingActiveHeader.tsx
frontend/src/components/setting-sidebar/: config.ts  index.tsx  mobile-setting-sidebar.tsx  setting-sidebar-update-alert.tsx  setting-sidebar.tsx
frontend/src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  autocomplete.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  checkbox-group.tsx  checkbox.tsx  form.tsx  (+39 more)
frontend/src/hooks/: use-auto-height.tsx  use-controlled-state.tsx  use-updater.ts  use-windows-portable.ts  useDragDrop.ts  useNodeCapability.ts  usePairedDeviceEvents.ts  usePairing.ts  useReceiver.ts  useSender.ts
frontend/src/i18n/: TranslationContext.tsx  context.ts  hooks.ts  index.ts  react-i18next-compat.ts  setup.ts
frontend/src/lib/: device-icon.ts  fileIcons.tsx  get-strict-context.tsx  openExternalUrl.ts  paired-send-counts.ts  pairing-api.ts  platform-api.ts  platform.ts  platformStyles.ts  receive-save-path.ts  relay-auth-token.test.ts  relay-auth-token.ts  relay-change-warning.test.ts  relay-change-warning.ts  relay-config.test.ts  relay-config.ts  relay-fallback-options.test.ts  relay-fallback-options.ts  relay-fallback-toast.test.ts  relay-fallback-toast.ts  relay-status.test.ts  relay-status.ts  relay-url-validation.test.ts  relay-url-validation.ts  relay.ts  router-basename.ts  setting-store-tauri.ts  setting-store.ts  systemNotification.ts  tauri.ts  utils.ts  version.ts  wasm-bridge-client.ts  web-drag-drop.ts  web-event-bus.ts  web-file-store.ts  web-preview-error.ts  web-save-location.ts  web-send-items.test.ts  web-send-items.ts  (+4 more)
frontend/src/plugins/: nativeUtils.ts
frontend/src/routes/: index.tsx  notfound.tsx  routes.tsx  settings.devices.tsx  settings.general.tsx  settings.network.tsx  settings.tsx
frontend/src/store/: app-setting.ts  node-capability-store.ts  paired-invite-store.ts  pairing-data-store.ts  receiver-actions-store.ts  sender-store.ts  theme-store.ts  transfer-tab-store.ts
frontend/src/types/: app.ts  file-system-access.d.ts  nav-item.ts  receiver.ts  sender.ts  transfer.ts  ui.ts
frontend/src/utils/: etaUtils.ts
scripts/: android-release-build.js  apply-android-release-gradle-patches.js  build-engine-wasm.sh  build-wasm-bridge.js  build-wasm-bridge.sh  deploy-web-vercel.sh  generate-release-notes.js  package-windows-portable.js  patch-linux-deb.js  run-lib-tests.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/WiX/: context-menu.wxs
src-tauri/plugins/tauri-plugin-native-utils/: build.rs
src-tauri/plugins/tauri-plugin-native-utils/android/src/main/java/com/altsendme/plugin/native_utils/: CopyUtils.kt  ExportUtils.kt  NativeUtils.kt
src-tauri/plugins/tauri-plugin-native-utils/permissions/: default.toml
src-tauri/plugins/tauri-plugin-native-utils/permissions/autogenerated/commands/: consume_share_intent.toml  debug_share_snapshot.toml  export_to_tree.toml  open_download_folder.toml
src-tauri/plugins/tauri-plugin-native-utils/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-native-utils/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
src-tauri/src/: commands.rs  lib.rs  state.rs
src-tauri/src/platform/windows/: context_menu.rs  mod.rs  portable.rs  window.rs
src-tauri/windows/: hooks.nsh
wasm-bridge/: Cargo.toml
wasm-bridge/.cargo/: config.toml
wasm-bridge/src/: lib.rs
(+48 files in other folders)
