[package]
name = "engine-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Tony Antony <tonyantony300@gmail.com>"]
license = "AGPL-3.0"
repository = "https://github.com/tonyantony300/alt-sendme"
description = "WebAssembly bridge for alt-sendme P2P file transfer (browser target)"
rust-version = "1.91"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
iroh = { version = "1.0.0", default-features = false, features = ["tls-ring"] }
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
