[package]
name = "engine"
version = "0.1.0"
edition = "2021"
authors = ["Tony Antony <tonyantony300@gmail.com>"]
keywords = ["scp", "sftp", "network", "p2p", "holepunching"]
categories = ["network-programming"]
license = "AGPL-3.0"
repository = "https://github.com/tonyantony300/alt-sendme"
description = "AltSendme - Frictionless peer-to-peer file transfer desktop application with NAT hole punching"
readme = "README.md"

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.91"


[lib]
name = "engine"
crate-type = ["lib", "staticlib"]

[dependencies]
anyhow = "1.0.75"
# Keep transitive Iroh stack crates above audited vulnerable versions.
bytes = "=1.11.1"
derive_more = { version = "2.0.1", features = ["display", "from_str"] }
# I had some issues with futures-buffered 0.2.9
futures-buffered = "0.2"
iroh-blobs = { version = "0.103" }
iroh = "1.0.0"
rand = "0.10"
rustls-webpki = "=0.103.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
data-encoding = "2.8.0"
n0-future = "0.3"
hex = "0.4.3"
irpc = "0.17.0"

# Native-only dependencies (filesystem, CLI reference binary helpers).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.4.10", features = ["derive"] }
console = "0.15.7"
crossterm = { version = "0.29.0", features = [
  "event-stream",
  "osc52",
], optional = true }
dirs = "6.0.0"
indicatif = "0.17.7"
num_cpus = "1.16.0"
walkdir = "2.4.0"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.174", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
  "Win32_System_Console",
], optional = true }

[dev-dependencies]
duct = "0.13.6"
nix = { version = "0.29", features = ["signal", "process"] }
rand = "0.10"
serde_json = "1.0.108"
tempfile = "3.8.1"

[features]
clipboard = ["dep:crossterm", "dep:windows-sys", "dep:libc"]
default = ["clipboard"]

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
lto = true
debug = "none"
strip = true
