[package]
name = "alt-sendme"
version = "0.6.0"
description = "P2P file sharing with NAT hole punching"
authors = ["Tony Antony"]
license = "AGPL 3.0"
edition = "2021"
rust-version = "1.91"

[lib]
name = "alt_sendme_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
serde_json = "1.0"

[dependencies]
tauri = { version = "=2.10.1", features = ["tray-icon", "image-png"] }
mime_guess="2.0"
base64 = "0.22.1"
image="0.25"
tauri-plugin-dialog = "2.7"
tauri-plugin-opener = "2.5.3"
tauri-plugin-os = "2.3"
tauri-plugin-single-instance = "2.4"
tauri-plugin-updater = "2.10"
tauri-plugin-native-utils = { path = "./plugins/tauri-plugin-native-utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
n0-watcher = "1.0"
iroh = "1.0.0"
iroh-blobs = { version = "0.103" }
engine = { path = "../engine" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.4"
tauri-plugin-store = "2.4.2"
tauri-plugin-notification = "2.3.3"
reqwest = "0.13.2"

[features]
default = ["custom-protocol", "default-tls"]
default-tls = ["reqwest/default-tls"]
custom-protocol = ["tauri/custom-protocol"]
linux-gstreamer = ["dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-video"]
cargo-clippy = []

[target.'cfg(target_os = "linux")'.dependencies]
gstreamer = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }
gstreamer-video = { version = "0.23", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
dunce = "1.0"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Media_MediaFoundation",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
objc = "0.2"
